# vecmat-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README  README.md  appveyor.yml
.github/workflows/: test.yml
src/: array.rs  distr.rs  distributions.rs  lib.rs  macros.rs  map.rs  map_test.rs  mat.rs  mat_test.rs  traits.rs  vec.rs  vec_bench.rs  vec_test.rs
src/array/: base.rs  iter.rs  mod.rs  tests.rs
src/complex/: approx.rs  complex.rs  complex_.rs  distr.rs  format.rs  mod.rs  moebius.rs  quaternion.rs  random.rs
src/complex/tests/: base.rs  complex_.rs  mod.rs  quaternion.rs
src/complex/tests/moebius/: chain.rs  mod.rs  transform.rs
src/complex/tests/quaternion/: basic.rs  mod.rs
src/matrix/: approx.rs  base.rs  distr.rs  dot.rs  format.rs  math.rs  mod.rs  other.rs  product.rs  random.rs  square.rs  tests.rs  transpose.rs
src/matrix/base/: convert.rs  init.rs  iter.rs  mod.rs
src/matrix/ops/: base.rs  bit.rs  bool_.rs  int.rs  iter.rs  mod.rs  vcmp.rs
src/polynomial/: base.rs  iter.rs  mod.rs  ops.rs
src/transform/: affine.rs  chain.rs  linear.rs  mod.rs  moebius.rs  rotation.rs  scale.rs  shift.rs  tests.rs
src/vector/: approx.rs  base.rs  distr.rs  dot.rs  math.rs  mod.rs  random.rs  spec.rs  tests.rs
src/vector/base/: format.rs  init.rs  iter.rs  mod.rs  tests.rs
src/vector/ops/: base.rs  bit.rs  bool_.rs  dot.rs  int.rs  iter.rs  mod.rs  vcmp.rs
