[package]
name = "vecmat"
version = "0.5.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

description = "Lightweight low-dimensional vector and matrix library"
documentation = "https://docs.rs/vecmat"
homepage = "https://github.com/agerasev/vecmat-rs"
repository = "https://github.com/agerasev/vecmat-rs"
readme = "README.md"
keywords = ["vector", "matrix", "math"]
categories = ["algorithms", "data-structures", "science"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = ["num-traits/std", "num-integer/std"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-integer = { version = "0.1", default-features = false }
